tests/spec/non_conformant/errors/fn_debug/mod.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/fn-debug"

#[allow(unused)]
use super::runner;

mod property;

mod ruleset;

mod simple;
